--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,7 @@ dependencies {
     implementation('org.mariadb.jdbc:mariadb-java-client:2.0.3')
     implementation("org.mybatis:mybatis-spring:1.3.1")
     implementation("org.mybatis:mybatis:3.5.2")
-   // implementation("mysql:mysql-connector-java:5.1.46")
+    implementation("mysql:mysql-connector-java:5.1.46")
 
 
 
