--- a/build.gradle
+++ b/build.gradle
@@ -26,13 +26,10 @@ dependencies {
     implementation('org.springframework.boot:spring-boot-configuration-processor')
 
     implementation("org.mybatis.spring.boot:mybatis-spring-boot-starter:1.3.1")
-    implementation('org.mariadb.jdbc:mariadb-java-client:2.0.3')
-    implementation("org.mybatis:mybatis-spring:1.3.1")
-    implementation("org.mybatis:mybatis:3.5.2")
     implementation("mysql:mysql-connector-java:5.1.46")
 
-
-
+    implementation('org.projectlombok:lombok')
+    annotationProcessor('org.projectlombok:lombok')
 }
 
 test {
